fixed nav alignment

--- a/resources/css/contact.scss
+++ b/resources/css/contact.scss
@@ -11,7 +11,7 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 1;
-    padding-top: 100px;
+    padding-top: 130px;
     transition: all 0.2s;
     .close {
         position: fixed;
