--- a/resources/css/default.scss
+++ b/resources/css/default.scss
@@ -118,12 +118,12 @@ footer {
         top: 0;
         display: none;
         width: 100%;
-        background-image: url('../img/mochaGrunge.png');
-        background-repeat: repeat;
         text-align: center;
         height: 30px;
         z-index: 999;
+        background-color: #6D6D6D;
         .main-title-fixed {
+            padding-top: 3px;
             color: white;
         }
 
@@ -133,13 +133,18 @@ footer {
         top: 30px;
         height: 30px;
         width: 100%;
-        background-image: url('../img/mochaGrunge.png');
-        background-repeat: repeat;
         display: none;
         text-align: center;
+        background-color: #6D6D6D;
         z-index: 999;
+        box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.14);
         p {
             display: inline-block;
+            width: 50px;
+            text-align: center;
+            a {
+                color: #EBEBEB;
+            }
             
         }
     }
@@ -148,19 +153,16 @@ footer {
         top: 60px;
         height: 44px;
         width: 100%;
-        background-image: url('../img/mochaGrunge.png');
-        background-repeat: repeat;
         display: none;
         text-align: center;
+        background-color: #6D6D6D;
         z-index: 999;
         p {
             display: inline-block;
-            padding: 0 10px;
+            width: 40px;
+            text-align: center;
             a {
-                color: $link-color;
-            }
-            &:first-child {
-                padding-left: 18px;
+                color: #EBEBEB; 
             }
         }
     }
